# storage/api-docs/api-docs.json
@@ -82,11 +82,113 @@
         "user/inbox": {
             "get": {
                 "tags": [
-                    "users"
+                    "Users"
                 ],
                 "summary": "the user's inbox",
                 "description": "Retrieve the all asks and  submissions",
                 "operationId": "GetUserInbox",
+                "requestBody": {
+                    "description": "Pass user credentials",
+                    "required": true
+                },
+                "responses": {
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "200": {
+                        "description": "success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "Meta": {
+                                            "properties": {
+                                                "Status": {
+                                                    "type": "integer",
+                                                    "example": 200
+                                                },
+                                                "msg": {
+                                                    "type": "string",
+                                                    "example": "OK"
+                                                }
+                                            },
+                                            "type": "object"
+                                        },
+                                        "response": {
+                                            "properties": {
+                                                "total_asks": {
+                                                    "type": "Number",
+                                                    "example": 263
+                                                },
+                                                "total_submissions": {
+                                                    "type": "Number",
+                                                    "example": 214
+                                                },
+                                                "asks": {
+                                                    "description": "asks in user's inbox",
+                                                    "type": "array",
+                                                    "items": {
+                                                        "properties": {
+                                                            "ask_1": {
+                                                                "description": "the first ask",
+                                                                "type": "object"
+                                                            },
+                                                            "ask_2": {
+                                                                "description": "the second ask",
+                                                                "type": "object"
+                                                            },
+                                                            "ask_3": {
+                                                                "description": "the third ask",
+                                                                "type": "object"
+                                                            }
+                                                        },
+                                                        "type": "object"
+                                                    }
+                                                },
+                                                "submissions": {
+                                                    "description": "submissions in user's inbox",
+                                                    "type": "array",
+                                                    "items": {
+                                                        "properties": {
+                                                            "sub_1": {
+                                                                "description": "the first submission",
+                                                                "type": "object"
+                                                            },
+                                                            "sub_2": {
+                                                                "description": "the second submission",
+                                                                "type": "object"
+                                                            },
+                                                            "sub_3": {
+                                                                "description": "the third submission",
+                                                                "type": "object"
+                                                            }
+                                                        },
+                                                        "type": "object"
+                                                    }
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "user/inbox/{blog-identifier}": {
+            "get": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "blog's inbox",
+                "description": "Retrieve the all asks and  submissions of a certain blog",
+                "operationId": "GetBlogInbox",
                 "requestBody": {
                     "description": "Pass user credentials",
                     "required": true
@@ -4947,6 +5049,46 @@
                 ]
             }
         },
+        "/settings/account/delete": {
+            "delete": {
+                "tags": [
+                    "Settings"
+                ],
+                "summary": "Delete User Account",
+                "description": "This method is used to delete the account of the authenticated user.",
+                "operationId": "deleteAccount",
+                "responses": {
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "meta": {
+                                            "properties": {
+                                                "status": {
+                                                    "type": "integer",
+                                                    "example": 200
+                                                },
+                                                "msg": {
+                                                    "type": "string",
+                                                    "example": "OK"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "settings/notifications": {
             "post": {
                 "tags": [
@@ -5154,46 +5296,6 @@
                         "bearer": []
                     }
                 ]
-            }
-        },
-        "/settings/account/delete": {
-            "delete": {
-                "tags": [
-                    "Settings"
-                ],
-                "summary": "Delete User Account",
-                "description": "This method is used to delete the account of the authenticated user.",
-                "operationId": "deleteAccount",
-                "responses": {
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "200": {
-                        "description": "Success",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "meta": {
-                                            "properties": {
-                                                "status": {
-                                                    "type": "integer",
-                                                    "example": 200
-                                                },
-                                                "msg": {
-                                                    "type": "string",
-                                                    "example": "OK"
-                                                }
-                                            },
-                                            "type": "object"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    }
-                }
             }
         },
         "/user/tags/add": {
